Notebook - added a section about getting active players

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -35,6 +35,40 @@
     "\n",
     "print(os.getcwd())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting active players\r\n",
+    "Use get_active_players.py main() with start and end time. It may be required to change the main function loop to iterate through more past transactions.\r\n",
+    "Also change CURRENT_BLOCK_NUMBER to the current one - to start checking transactions before this block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "import get_active_players\n",
+    "\n",
+    "# The same timeframe as for the training set\n",
+    "time_from_active_players = int(datetime.datetime(2022, 10, 28, 0, 0).timestamp())\n",
+    "time_to_active_players = int(datetime.datetime(2022, 12, 28, 0, 0).timestamp())\n",
+    "active_players_file = f'../data/active_players_2months.csv'\n",
+    "\n",
+    "get_active_players.make_active_players_file(time_from_active_players, time_to_active_players, 70, active_players_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
