Added the function to download players bets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -101,11 +101,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading and preparing the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All needed variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Timeframe to do all the computing (Training + Validation + Test sets)\n",
+    "time_from_get_bets = int(datetime.datetime(2022, 10, 28, 0, 0).timestamp())\n",
+    "time_to_get_bets = int(datetime.datetime(2023, 1, 28, 0, 0).timestamp())\n",
+    "\n",
+    "  # to get all the transactions from bscscan api (depends on the time_from_get_bets)\n",
+    "block_from_get_bets = 22394098\n",
+    "block_to_get_bets = 25624791\n",
+    "\n",
+    "# Downloading players bet history settings\n",
+    "players_data_folder = '../data/players_data/'\n",
+    "\n",
+    "# Download rounds settings (check the rounds range according to the time_from_get_bets and time_to_get_bets values in the blockchain)\n",
+    "from_round = 36000\n",
+    "to_round = 65000\n",
+    "rounds_file = '../data/rounds_data/final_rounds_data.csv'\n",
+    "\n",
+    "# Final data\n",
+    "final_data_folder = '../data/merged_data/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downloading players bet history\r\n",
+    "We have to collect every needed player transaction data and save to separate JSON files."
+   ]
   }
  ],
  "metadata": {
