Notebook - added the code to download the players bets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -147,6 +147,17 @@
     "### Downloading players bet history\r\n",
     "We have to collect every needed player transaction data and save to separate JSON files."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import download_players_bets\n",
+    "print(len(main_wallets_list))\n",
+    "download_players_bets.main_concurrent(main_wallets_list, players_data_folder, block_from_get_bets, block_to_get_bets)"
+   ]
   }
  ],
  "metadata": {
