Notebook - added a section about downloading the rounds info

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -158,6 +158,33 @@
     "print(len(main_wallets_list))\n",
     "download_players_bets.main_concurrent(main_wallets_list, players_data_folder, block_from_get_bets, block_to_get_bets)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downloading rounds history\n",
+    "Use web3py to download all the rounds info and save it to the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import download_rounds\n",
+    "downloader = download_rounds.RoundsDownloader()\n",
+    "\n",
+    "data = downloader.download_rounds(from_round, to_round)  # Download rounds FROM-TO, we only need the last few months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
