Notebook - fixed the section about downloading the rounds

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -176,7 +176,8 @@
     "import download_rounds\n",
     "downloader = download_rounds.RoundsDownloader()\n",
     "\n",
-    "data = downloader.download_rounds(from_round, to_round)  # Download rounds FROM-TO, we only need the last few months"
+    "data = downloader.download_rounds(from_round, to_round)  # Download rounds FROM-TO, we only need the last few months\n",
+    "downloader.save_rounds(rounds_file, data)"
    ]
   },
   {
