Notebook - Added a section about preparing the data

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -181,11 +181,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Preparing the data\n",
+    "Before using all the data we have to create dataframes in CSV files with all the needed stuff in one place\n",
+    "The data will be stored in 2 saparate CSV files - one containing the info about the bet type of each analyzed player, the other one about the bet size"
+   ]
   }
  ],
  "metadata": {
