Notebook - added section "Preparing the data"

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -188,6 +188,60 @@
     "Before using all the data we have to create dataframes in CSV files with all the needed stuff in one place\n",
     "The data will be stored in 2 saparate CSV files - one containing the info about the bet type of each analyzed player, the other one about the bet size"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analyze_players\n",
+    "\n",
+    "rounds_df = analyze_players.load_rounds_data(rounds_file)\n",
+    "    \n",
+    "analyze_players.create_final_csv_files(players_data_folder, final_data_folder, rounds_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "final_bet_amount.csv file contains data about all the rounds and separate columns for each players bet amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_bet_amount_df = pd.read_csv(f'{final_data_folder}final_bet_amount.csv')\n",
+    "final_bet_amount_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "final_bet_amount.csv file contains data about all the rounds and separate columns for each players bet amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_player_bet_df = pd.read_csv(f'{final_data_folder}final_player_bet.csv', low_memory=False)\n",
+    "final_player_bet_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
