Notebook - added section "Selecting the best players"

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -237,6 +237,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting the best players\n",
+    "We have collected the data about the active players in the given dataframe, but not all players are worth following. Let's check what players have high win ratio or made the most money"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting the timeframe for training&validation&test sets\r\n",
+    "We have downloaded the data in timeframe:\r\n",
+    "2022.10.28 - 2023.01.28\r\n",
+    "\r\n",
+    "Let's make the first 2 months to be the training set, 1/2 month validation set and 1/2 month test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import pandas as pd\n",
+    "\n",
+    "time_from_training = int(datetime.datetime(2022, 10, 28, 0, 0).timestamp())\n",
+    "time_to_training = int(datetime.datetime(2022, 12, 28, 0, 0).timestamp())\n",
+    "\n",
+    "time_from_validation = int(datetime.datetime(2022, 12, 28, 0, 0).timestamp())\n",
+    "time_to_validation = int(datetime.datetime(2023, 1, 13, 0, 0).timestamp())\n",
+    "\n",
+    "time_from_test = int(datetime.datetime(2023, 1, 13, 0, 0).timestamp())\n",
+    "time_to_test = int(datetime.datetime(2023, 1, 28, 0, 0).timestamp())\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
