--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +272,29 @@
     "\n",
     "time_from_test = int(datetime.datetime(2023, 1, 13, 0, 0).timestamp())\n",
     "time_to_test = int(datetime.datetime(2023, 1, 28, 0, 0).timestamp())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Players metrics\n",
+    "Let's check how many bets were actually good for each player (win ratio) and how many CAKE tokens each player earned in total and per bet. To not affect the test set, consider only data in the training set timeframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import check_players_results\n",
+    "import utils\n",
+    "\n",
+    "player_bet_df, bet_amount_df = utils.load_players_data(time_from_training, time_to_training)\n",
+    "\n",
+    "players_metrics_df = check_players_results.get_players_metrics(player_bet_df, bet_amount_df)\n",
+    "players_metrics_df.sort_values(by='total_profit', ascending=False)"
    ]
   },
   {
