Notebook - added histogram to "Players metrics" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -302,6 +302,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "players_metrics_df[['total_profit', 'profit_per_bet']].hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
