Notebook - added "Training the models" section with a dataframe with the copytrading results

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -307,6 +307,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the models\n",
+    "\n",
+    "Now we can use all the collected data for simulation purposes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulating the environment\n",
+    "Since placing a bet affects the game environment (when you add money to the pool, the payout multipliers change) we have to use a simulator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Copytrading each player\n",
+    "Copytrading one player at a time, works similar to just calculating his overall profit - but if we place a bet we make changes to the environment and change the pool. So if we place the same bet as player X, both of us will make less money (assuming we win) than if he played alone."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import simulator\n",
+    "player_bet_df, bet_amount_df = utils.load_players_data(time_from_training, time_to_training)\n",
+    "\n",
+    "# Get all wallets from player_bet_df\n",
+    "wallets = player_bet_df.columns.to_list()\n",
+    "not_players_list = ['epoch', 'start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price',\n",
+    "                    'total_amount', 'bull_amount', 'bear_amount', 'position']\n",
+    "wallets = [wallet for wallet in wallets if wallet not in not_players_list]\n",
+    "\n",
+    "data = []\n",
+    "for wallet in wallets:\n",
+    "    trades_data = simulator.copy_trade_player(player_bet_df, bet_amount_df, wallet)\n",
+    "    data.append({'wallet': wallet, 'profit': trades_data['profit'].sum()})\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "df.sort_values(by='profit', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram with the profit results, we can see the curve is Gaussian-like\n",
+    "df['profit'].hist(bins=50)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
