Notebook - added "Choosing the feature sets" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -446,6 +446,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset seems to be well balanced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choosing the feature sets\r\n",
+    "We will check few types of features sets to check which one provides the most useful information about the label.\r\n",
+    "- total pool sizes for Bear/Bull bets (no additional info about the players)\r\n",
+    "- all 247 players bet info (Bull/Bear): 247 columns in total\r\n",
+    "- all 247 players bet info (Bull/Bear) + their bet size info (in CAKE tokens): 247*2 = 494 columns in total\r\n",
+    "- the best 10% of players bet info (Bull/Bear) according to their overall profit\r\n",
+    "- the best 10% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)\r\n",
+    "- the best 20% of players bet info (Bull/Bear) according to their overall profit\r\n",
+    "- the best 20% of players bet info (Bull/Bear) according to their overall profit + their bet size info (in CAKE tokens)\r\n",
+    "- total amount of CAKE tokens bets for Bull/Bear of the best 10% of players + total number of bets (Bull/Bear) of the best 10% of players: 4 columns in total\r\n",
+    "- total amount of CAKE tokens bets for Bull/Bear of the best 20% of players + total number of bets (Bull/Bear) of the best 20% of players: 4 columns in total"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
