Notebook - added "Cleaning the data before training" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -470,6 +470,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning the data before training\n",
+    "Because NaN values provide no information we can delete all the rows that contain only NaNs. This would work in the production environment as if we get no information about the current round we can simply pass that round (so we don't place any bet)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
