Notebook - added "Testing the scikit-learn models" section

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -503,6 +503,135 @@
     "\n",
     "# Check precision, recall, F1 \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the scikit-learn models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def run(x_train, y_train, x_test, y_test, clf, threshold=0.7):\n",
+    "    clf.fit(x_train, y_train)\n",
+    "\n",
+    "    total_accuracy = clf.score(x_test, y_test)\n",
+    "\n",
+    "    predicted_probability = clf.predict_proba(x_test)\n",
+    "\n",
+    "    # Create a df to compare the predicted_probability with the real y_test\n",
+    "    df = pd.DataFrame(predicted_probability, columns=[\"Bear\", \"Bull\"])\n",
+    "    df[\"position\"] = y_test.values\n",
+    "    df[\"predicted_position\"] = np.where(df[\"Bear\"] > threshold, 0, np.nan)\n",
+    "    df[\"predicted_position\"] = np.where(df[\"Bull\"] > threshold, 1, df[\"predicted_position\"])\n",
+    "\n",
+    "    df[\"correct\"] = np.where(df[\"position\"] == df[\"predicted_position\"], 1, 0)\n",
+    "\n",
+    "    # Get accuracy when probability is above threshold\n",
+    "    accuracy = df[\"correct\"].sum() / (df['predicted_position'].count() + 0.0000001)  # Count only not NaN values\n",
+    "\n",
+    "    return {'classifier': str(clf), 'threshold': threshold, 'total_accuracy': total_accuracy,\n",
+    "            'total_number_of_bets': len(y_test), 'accuracy_above_threshold': accuracy,\n",
+    "            'number_of_bets_above_threshold': df['predicted_position'].count()}\n",
+    "\n",
+    "\n",
+    "def prepare_data(df, cols_to_leave_arg):\n",
+    "    cols_to_leave = cols_to_leave_arg.copy()  # Make a copy of the list to not remove the elements from the original list\n",
+    "\n",
+    "    df = df[df[\"position\"] != \"House\"]  # To make the problem binary classification\n",
+    "    df = df[df[\"total_amount\"] != 0]  # Do not consider the rounds where no one bet\n",
+    "    df = df[cols_to_leave]\n",
+    "\n",
+    "    # Remove nan rows (where none from selected players placed any bet)\n",
+    "    not_nan_cols = ['position', 'bull_amount', 'bear_amount']\n",
+    "    for element in not_nan_cols:\n",
+    "        cols_to_leave.remove(element)\n",
+    "\n",
+    "    if len(cols_to_leave) > 0:\n",
+    "        df = df.dropna(subset=cols_to_leave, how='all')\n",
+    "\n",
+    "    # Get the list of the categorical cols and do one hot encoding\n",
+    "    categorical_cols = df.select_dtypes(include=['category']).columns.to_list()\n",
+    "    categorical_cols.remove('position')\n",
+    "\n",
+    "    for col in categorical_cols:\n",
+    "        one_hot_encoded_cols = pd.get_dummies(df[col], prefix_sep='_', prefix=col)\n",
+    "\n",
+    "        # Drop column with 'House' in the name (as the player can only bet on Bull or Bear)\n",
+    "        one_hot_encoded_cols = one_hot_encoded_cols.drop([col + '_House'], axis=1)\n",
+    "        df = df.drop([col], axis=1).join(one_hot_encoded_cols)\n",
+    "\n",
+    "    df = df.replace(\"Bull\", 1)\n",
+    "    df = df.replace(\"Bear\", 0)\n",
+    "\n",
+    "    df = df.replace(\"House\", np.nan)  # Although the House rows are dropped, we have to replace it to remove the category\n",
+    "    df = df.astype(float)\n",
+    "\n",
+    "    df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def main(train_df, validate_df, clfs, threshold_list, cols_to_leave):\n",
+    "\n",
+    "    train_df = prepare_data(train_df, cols_to_leave)\n",
+    "    validate_df = prepare_data(validate_df, cols_to_leave)\n",
+    "\n",
+    "    # X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
+    "    X_test, y_test = validate_df.drop([\"position\"], axis=1), validate_df[\"position\"]\n",
+    "    X_train, y_train = train_df.drop([\"position\"], axis=1), train_df[\"position\"]\n",
+    "\n",
+    "    data_list = []\n",
+    "\n",
+    "    for clf in clfs:\n",
+    "        for threshold in threshold_list:\n",
+    "            data = run(X_train, y_train, X_test, y_test, clf, threshold)\n",
+    "            data_list.append(data)\n",
+    "\n",
+    "    df = pd.DataFrame(data_list)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "# Checking the common classifiers with the unedited data\n",
+    "\n",
+    "clfs = [RandomForestClassifier(), MLPClassifier(), KNeighborsClassifier()]\n",
+    "\n",
+    "df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
