--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -602,19 +602,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "# Checking the common classifiers with the unedited data\n",
     "\n",
-    "clfs = [RandomForestClassifier(), MLPClassifier(), KNeighborsClassifier()]\n",
+    "clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
+    "        DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
+    "        KNeighborsClassifier(1), KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
+    "        KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
     "\n",
-    "df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+    "first_experiment_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
    ]
   },
   {
@@ -623,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "first_experiment_df"
    ]
   },
   {
