Notebook - updated "Testing the scikit-learn models" section with SVM

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,6 +630,29 @@
    "outputs": [],
    "source": [
     "first_experiment_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc_clfs = [SVC(kernel='rbf', probability=True), SVC(kernel='linear', probability=True),\n",
+    "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
+    "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
+    "second_experiment_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_experiment_df"
    ]
   },
   {
