Notebook - added calculations with #2 features set

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -458,7 +458,7 @@
    "source": [
     "### Choosing the feature sets\r\n",
     "We will check few types of features sets to check which one provides the most useful information about the label.\r\n",
-    "- total pool sizes for Bear/Bull bets (no additional info about the players)\r\n",
+    "- total pool sizes for Bear/Bull bets (no additional info about the player: 2 columns in total (these features will be added to ALL feture sets below)s)\r\n",
     "- all 247 players bet info (Bull/Bear): 247 columns in total\r\n",
     "- all 247 players bet info (Bull/Bear) + their bet size info (in CAKE tokens): 247*2 = 494 columns in total\r\n",
     "- the best 10% of players bet info (Bull/Bear) according to their overall profit\r\n",
@@ -601,9 +601,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature set #1: total pool sizes for Bear/Bull bets (no additional info about the players)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -614,13 +623,16 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "# Checking the common classifiers with the unedited data\n",
-    "\n",
     "clfs = [RandomForestClassifier(100), RandomForestClassifier(500), RandomForestClassifier(1000),\n",
     "        DecisionTreeClassifier(criterion='entropy'), MLPClassifier(alpha=1, max_iter=1000), GaussianNB(),\n",
     "        KNeighborsClassifier(1), KNeighborsClassifier(3), KNeighborsClassifier(5), KNeighborsClassifier(7),\n",
     "        KNeighborsClassifier(9), KNeighborsClassifier(11), LogisticRegression(max_iter=1000)]\n",
     "\n",
-    "first_experiment_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
+    "\n",
+    "feature_set_1 = ['bull_amount', 'bear_amount', 'position']\n",
+    "\n",
+    "experiment1_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set_1)"
    ]
   },
   {
@@ -629,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_experiment_df"
+    "experiment1_df"
    ]
   },
   {
@@ -643,7 +655,8 @@
     "svc_clfs = [SVC(kernel='rbf', probability=True), SVC(kernel='linear', probability=True),\n",
     "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
     "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
-    "second_experiment_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+    "\n",
+    "experiment2_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
    ]
   },
   {
@@ -652,7 +665,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "second_experiment_df"
+    "experiment2_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature set #2: all 247 players bet info (Bull/Bear): 247 columns in total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set_2 = ['bull_amount', 'bear_amount', 'position']  # Keep the features from the feature_set_1 as they have predicting power\n",
+    "feature_set_2.extend(main_wallets_list)\n",
+    "experiment3_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This features set model takes much longer to train\n",
+    "third_experiment_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
   {
