--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using machine learning models to get better results ##"
+    "## Preparing the data to be used in the ml ##"
    ]
   },
   {
@@ -388,7 +388,9 @@
    "outputs": [],
    "source": [
     "train_player_bet_df, train_bet_amount_df = utils.load_players_data(time_from_training, time_to_training)\n",
-    "train_player_bet_df"
+    "train_player_bet_df = train_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
+    "train_df = train_player_bet_df.merge(train_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "train_df"
    ]
   },
   {
@@ -397,8 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validate_player_bet_df, validation_bet_amount_df = utils.load_players_data(time_from_validation, time_to_validation)\n",
-    "validate_player_bet_df"
+    "validate_player_bet_df, validate_bet_amount_df = utils.load_players_data(time_from_validation, time_to_validation)\n",
+    "validate_player_bet_df = validate_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
+    "validate_df = validate_player_bet_df.merge(validate_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "validate_df"
    ]
   },
   {
@@ -408,7 +412,9 @@
    "outputs": [],
    "source": [
     "test_player_bet_df, test_bet_amount_df = utils.load_players_data(time_from_test, time_to_test)\n",
-    "test_player_bet_df"
+    "test_player_bet_df = test_player_bet_df.drop(columns=['start_timestamp', 'lock_timestamp', 'close_timestamp', 'lock_price', 'close_price', 'total_amount', 'bull_amount', 'bear_amount', 'position'])\n",
+    "test_df = test_player_bet_df.merge(test_bet_amount_df, on = 'epoch', suffixes=['_bet','_amount'])\n",
+    "test_df"
    ]
   },
   {
@@ -424,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_player_bet_df['position'].value_counts()"
+    "train_df['position'].value_counts()"
    ]
   },
   {
@@ -433,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validate_player_bet_df['position'].value_counts()"
+    "validate_df['position'].value_counts()"
    ]
   },
   {
@@ -442,7 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_player_bet_df['position'].value_counts()"
+    "test_df['position'].value_counts()"
    ]
   },
   {
@@ -470,6 +476,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lists of the best players (by total profit)\n",
+    "# There are 247 wallets in total, lets check how many is 10% and 20%\n",
+    "p10 = int(len(players_metrics_df)*0.1)\n",
+    "p20 = int(len(players_metrics_df)*0.2)\n",
+    "best_10p_players_list = players_metrics_df.sort_values(by='total_profit', ascending=False).reset_index(drop=True).loc[:p10-1, 'player'].values.tolist()\n",
+    "best_20p_players_list = players_metrics_df.sort_values(by='total_profit', ascending=False).reset_index(drop=True).loc[:p20-1, 'player'].values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the needed columns names in the lists\n",
+    "all_players_bet_cols = [col+'_bet' for col in main_wallets_list]\n",
+    "all_players_amount_cols = [col+'_amount' for col in main_wallets_list]\n",
+    "\n",
+    "best_10p_players_bet_cols = [col+'_bet' for col in best_10p_players_list]\n",
+    "best_10p_players_amount_cols = [col+'_amount' for col in best_10p_players_list]\n",
+    "\n",
+    "best_20p_players_bet_cols = [col+'_bet' for col in best_20p_players_list]\n",
+    "best_20p_players_amount_cols = [col+'_amount' for col in best_20p_players_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set1 = ['bull_amount', 'bear_amount', 'position']\n",
+    "\n",
+    "feature_set2 = all_players_bet_cols # Keep the features from the feature_set_1 as they have predicting power\n",
+    "feature_set2.extend(feature_set1)\n",
+    "\n",
+    "feature_set3 = all_players_bet_cols + all_players_amount_cols\n",
+    "feature_set3.extend(feature_set1)\n",
+    "\n",
+    "feature_set4 = best_10p_players_bet_cols\n",
+    "feature_set4.extend(feature_set1)\n",
+    "\n",
+    "feature_set5 = best_10p_players_bet_cols + best_10p_players_amount_cols\n",
+    "feature_set5.extend(feature_set1)\n",
+    "\n",
+    "feature_set6 = best_20p_players_bet_cols\n",
+    "feature_set6.extend(feature_set1)\n",
+    "\n",
+    "feature_set7 = best_20p_players_bet_cols + best_20p_players_amount_cols\n",
+    "feature_set7.extend(feature_set1)\n",
+    "\n",
+    "# feature_set8\n",
+    "# feature_set9"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -489,26 +556,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get needed columns\n",
-    "# drop nan rows (check how many rows are left)\n",
-    "# get predictions\n",
-    "# During the evaluation make charts:\n",
-    "# check accuracy\n",
-    "# check simulation results\n",
-    "\n",
-    "# Check precision, recall, F1 \n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing the scikit-learn models"
+    "## Testing the scikit-learn models"
    ]
   },
   {
@@ -604,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature set #1: total pool sizes for Bear/Bull bets (no additional info about the players)"
+    "### Feature set #1: total pool sizes for Bear/Bull bets (no additional info about the players)"
    ]
   },
   {
@@ -630,9 +681,7 @@
     "\n",
     "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
     "\n",
-    "feature_set_1 = ['bull_amount', 'bear_amount', 'position']\n",
-    "\n",
-    "experiment1_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set_1)"
+    "experiment1_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -672,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature set #2: all 247 players bet info (Bull/Bear): 247 columns in total"
+    "### Feature set #2: all 247 players bet info (Bull/Bear): 247 columns in total"
    ]
   },
   {
@@ -681,9 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_set_2 = ['bull_amount', 'bear_amount', 'position']  # Keep the features from the feature_set_1 as they have predicting power\n",
-    "feature_set_2.extend(main_wallets_list)\n",
-    "experiment3_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set_2)"
+    "experiment3_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
@@ -693,7 +740,7 @@
    "outputs": [],
    "source": [
     "# This features set model takes much longer to train\n",
-    "third_experiment_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
+    "experiment3_df.sort_values(by='accuracy_above_threshold', ascending=False).head(20)"
    ]
   },
   {
