Notebook - Added create_aggregated_df() function to create datasets for aggregated feature sets

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -532,8 +532,57 @@
     "feature_set7 = best_20p_players_bet_cols + best_20p_players_amount_cols\n",
     "feature_set7.extend(feature_set1)\n",
     "\n",
+    "# We need separate dataframes for these 2\n",
+    "feature_set8_train_df = pd.DataFrame()\n",
+    "feature_set8_train_df['Sum'] = df[col_list].sum(axis=1)\n",
     "# feature_set8\n",
     "# feature_set9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identifying columns for bet sizes and bet types\n",
+    "bet_type_columns = best_20p_players_bet_cols\n",
+    "bet_size_columns = best_20p_players_amount_cols\n",
+    "\n",
+    "def create_aggregated_df(df, bet_type_columns, bet_size_columns):\n",
+    "    # Filter the DataFrame to include only the bet size and bet type columns for the specified wallets\n",
+    "    filtered_df = df[bet_type_columns + bet_size_columns + ['epoch']].copy()\n",
+    "    \n",
+    "    # Initialize the columns for aggregation\n",
+    "    filtered_df['total_bet_size_bear'] = 0\n",
+    "    filtered_df['total_bet_size_bull'] = 0\n",
+    "    filtered_df['num_players_bear'] = 0\n",
+    "    filtered_df['num_players_bull'] = 0\n",
+    "    \n",
+    "    # Calculate Bear number for each row\n",
+    "    filtered_df['bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
+    "    filtered_df['bull_number'] = filtered_df[bet_type_columns].isin(['Bull']).sum(axis=1)\n",
+    "    \n",
+    "    filtered_df['bear_amount'] = 0\n",
+    "    filtered_df['bull_amount'] = 0\n",
+    "    \n",
+    "    # Iterate through each wallet's columns to aggregate the data\n",
+    "    for bet_type_column in bet_type_columns:\n",
+    "        bet_size_column = bet_type_column.replace('_bet', '_amount')\n",
+    "    \n",
+    "        wallet_df = filtered_df[['epoch', bet_size_column, bet_type_column]]\n",
+    "        # Aggregate data for Bear and Bull bets\n",
+    "        bear_bets = wallet_df.loc[wallet_df[bet_type_column] == 'Bear', [bet_size_column]]\n",
+    "        bull_bets = wallet_df.loc[wallet_df[bet_type_column] == 'Bull', [bet_size_column]]\n",
+    "    \n",
+    "        # Add bear_bets to filtered_df based on epoch\n",
+    "        filtered_df['bear_amount'] += bear_bets[bet_size_column]\n",
+    "        filtered_df['bull_amount'] += bull_bets[bet_size_column]\n",
+    "    \n",
+    "    # Drop rows where all columns are 0\n",
+    "    filtered_df = filtered_df[(filtered_df[bet_size_columns] != 0).any(axis=1)]\n",
+    "\n",
+    "    return filtered_df"
    ]
   },
   {
@@ -681,7 +730,7 @@
     "\n",
     "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]\n",
     "\n",
-    "experiment1_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
+    "experiment1_df = main(train_df=train_df, validate_df=validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1)"
    ]
   },
   {
@@ -705,7 +754,7 @@
     "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
     "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
     "\n",
-    "experiment2_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
+    "experiment2_df = main(train_df=train_df, validate_df=validate_df, clfs=svc_clfs, threshold_list=[0.6, 0.7, 0.8, 0.9, 0.95], cols_to_leave=['bull_amount', 'bear_amount', 'position'])"
    ]
   },
   {
@@ -730,7 +779,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment3_df = main(train_df=train_player_bet_df, validate_df=validate_player_bet_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
+    "experiment3_df = main(train_df=train_df, validate_df=validate_df, clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2)"
    ]
   },
   {
