Notebook - Fix the create_aggregated_df() function

--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -550,35 +550,31 @@
     "bet_size_columns = best_20p_players_amount_cols\n",
     "\n",
     "def create_aggregated_df(df, bet_type_columns, bet_size_columns):\n",
-    "    # Filter the DataFrame to include only the bet size and bet type columns for the specified wallets\n",
-    "    filtered_df = df[bet_type_columns + bet_size_columns + ['epoch']].copy()\n",
-    "    \n",
-    "    # Initialize the columns for aggregation\n",
-    "    filtered_df['total_bet_size_bear'] = 0\n",
-    "    filtered_df['total_bet_size_bull'] = 0\n",
-    "    filtered_df['num_players_bear'] = 0\n",
-    "    filtered_df['num_players_bull'] = 0\n",
-    "    \n",
+    "    filtered_df = df[bet_size_columns + bet_type_columns + ['epoch']].copy()\n",
+    "\n",
     "    # Calculate Bear number for each row\n",
     "    filtered_df['bear_number'] = filtered_df[bet_type_columns].isin(['Bear']).sum(axis=1)\n",
     "    filtered_df['bull_number'] = filtered_df[bet_type_columns].isin(['Bull']).sum(axis=1)\n",
-    "    \n",
+    "\n",
     "    filtered_df['bear_amount'] = 0\n",
     "    filtered_df['bull_amount'] = 0\n",
-    "    \n",
+    "\n",
+    "    # Replace NaN with 0 in the bet size columns\n",
+    "    filtered_df[bet_size_columns] = filtered_df[bet_size_columns].fillna(0)\n",
+    "\n",
     "    # Iterate through each wallet's columns to aggregate the data\n",
-    "    for bet_type_column in bet_type_columns:\n",
-    "        bet_size_column = bet_type_column.replace('_bet', '_amount')\n",
-    "    \n",
+    "    for wallet in wallets:\n",
+    "        bet_size_column = wallet + '_amount'\n",
+    "        bet_type_column = wallet + '_bet'\n",
+    "\n",
     "        wallet_df = filtered_df[['epoch', bet_size_column, bet_type_column]]\n",
-    "        # Aggregate data for Bear and Bull bets\n",
-    "        bear_bets = wallet_df.loc[wallet_df[bet_type_column] == 'Bear', [bet_size_column]]\n",
-    "        bull_bets = wallet_df.loc[wallet_df[bet_type_column] == 'Bull', [bet_size_column]]\n",
-    "    \n",
-    "        # Add bear_bets to filtered_df based on epoch\n",
-    "        filtered_df['bear_amount'] += bear_bets[bet_size_column]\n",
-    "        filtered_df['bull_amount'] += bull_bets[bet_size_column]\n",
-    "    \n",
+    "\n",
+    "        bear_bets = np.where(wallet_df[bet_type_column] == 'Bear', wallet_df[bet_size_column], 0)\n",
+    "        bull_bets = np.where(wallet_df[bet_type_column] == 'Bull', wallet_df[bet_size_column], 0)\n",
+    "\n",
+    "        filtered_df['bear_amount'] += bear_bets\n",
+    "        filtered_df['bull_amount'] += bull_bets\n",
+    "\n",
     "    # Drop rows where all columns are 0\n",
     "    filtered_df = filtered_df[(filtered_df[bet_size_columns] != 0).any(axis=1)]\n",
     "\n",
